 * language and i18n:
   * updated translations: Chinese, Danish, Dutch, French, German, Italian,
     Lithuanian, Polish, Spanish, Turkish
   * updated DejaVuSans to 2.23
 * graphics:
   * new elvish portraits by Kitty
 * multiplayer:
   * fixed bug #10777: Cannot cancel a multiplayer password prompt
   * fixed bug #10779: Rejoining game causes major problems
   * Fixed :control command to work
   * damage statistics for the current turn also works for observers now
   * skip replay no longer skips the story for players only for observers
     (bug #9538)
 * user interface:
   * Made ESC clear hotkey when changing hotkeys
   * Made quick replay skip messages
   * linger mode overlay is also drawn over fog and shroud (bug #10811)
   * Units are deselected before they move.
   * The next move can be prepared before the current attack/move 
     animation finishes (bug #7132).
   * If a move is interrupted, footsteps are drawn again.
   * Tuned some details of the mouse handling.
 * WML engine:
   * Fixed order of sighted and moveto events (bug: #9560)
 * miscellaneous and bug fixes:
   * Fixed turn timer and end_turn commands order (bug #10849)
   * Fixed boost test compile with 1.34.1
   * Make wesnoth work properly again if the datadir contains ../
   * Fixed some type of addon not being uninstallable (bug #10788)
   * some filtering was added to the [animate_unit] action to actually make it
     usefull
   * converted NO_MAP_DATA to new map format
   * fixed unchecked vector access
   * fixed weapon_specials filter_opponent to work in attack selection (bug #8333)
   * added a more graceful handling of maps without a header (bug #10787)
   * make sure the python campaign client list shows a space between the 
     headers if the size of the column is smaller than the header (eg uploads)

Version 1.3.14:
 * campaigns:
   * The Hammer of Thursagan:
     * 'Invaders' if there weren't enough free tiles to spawn all indigs the 