@@ -9,6 +9,7 @@ Version 1.3.14+svn:
    * fixed bug #10777: Cannot cancel a multiplayer password prompt
    * fixed bug #10779: Rejoining game causes major problems
    * Fixed :control command to work
+   * Fixed control change not to set wrong team if we are playing now
    * damage statistics for the current turn also works for observers now
    * skip replay no longer skips the story for players only for observers
      (bug #9538)
